--- a/canvas/sidecan/ii.canvas2D.md/contextdraw_finished.htm
+++ b/canvas/sidecan/ii.canvas2D.md/contextdraw_finished.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Drawing Into the 2D Context</title>
+		<title>Drawing 2D Context</title>
 		<style type="text/css">
 			#Canvas1 {
 				border: dotted 1px black;
@@ -21,7 +21,7 @@
 		</script>
 	</head>
 	<body>
-		<h1>Drawing Into the 2D Context</h1>
+		<h1>Drawing 2D Context</h1>
 		<p>After retrieving the canvas context, you can use the drawing methods to create content</p>
 		<canvas id="Canvas1" width="400" height="300">Your browser does not support canvas.</canvas>
 	</body>
