--- a/canvas/sidecan/iii.canDrawingTech/drawingstatetwo.htm
+++ b/canvas/sidecan/iii.canDrawingTech/drawingstatetwo.htm
@@ -36,6 +36,9 @@
 						// draw a stroked and filled rectangle
 						ctx.fillRect(325, 25, 100, 125);
 						ctx.strokeRect(325,25,100,125);
+						
+						ctx.fillRect(450,25,100,125);
+						ctx.strokeRect(450,25,100,125);
 					}
 				}
 			}
@@ -44,6 +47,6 @@
 	<body>
 		<h1>Saving and Restoring the Canvas State</h1>
 		<p>This example shows how to manage the canvas state using save() and restore()</p>
-		<canvas id="Canvas1" width="500" height="300">Your browser does not support canvas.</canvas>
+		<canvas id="Canvas1" width="700" height="300">Your browser does not support canvas.</canvas>
 	</body>
 </html>
